--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,14 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <a href="https://kevinroymcgregor.github.io/Psychic-Game/" target="blank"> <img src="assets/images/6-12-2019 4-44-18 PM.jpg" alt="Psychic Game">
 
-        <h3>Word Guess</h3>
+        <h3>Psychic Game</h3> </a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <a href="https://kevinroymcgregor.github.io/unit-4-game/" target="blank"> <img src="assets/images/White_Crystal.jpg" alt="Crystal Collector">
 
-        <h3>RPG Game</h3>
+        <h3>Crystal Collector</h3> </a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
