--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,9 @@
         <h3>Crystal Collector</h3> </a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+          <a href="https://kevinroymcgregor.github.io/unit-4-game/" target="blank"><img src="assets/images/Trivia-Game.jpg" alt="Trivia Game">
 
-        <h3>Trivia Game</h3>
+        <h3>Trivia Game</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
