updated portfolio with link to trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
         <h3>Crystal Collector</h3> </a>
       </div>
       <div class="work">
-          <a href="https://kevinroymcgregor.github.io/unit-4-game/" target="blank"><img src="assets/images/Trivia-Game.jpg" alt="Trivia Game">
+          <a href="https://kevinroymcgregor.github.io/TriviaGame/" target="blank"><img src="assets/images/Trivia-Game.jpg" alt="Trivia Game">
 
         <h3>Trivia Game</h3></a>
       </div>
