--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,9 @@
         <h3>Trivia Game</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <a href="https://kevinroymcgregor.github.io/GifTastic/"><img src="assets/images/technics-q-c-640-480-7.jpg" alt="Giftastic">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Giftastic</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
