--- a/portfolio.html
+++ b/portfolio.html
@@ -46,9 +46,9 @@
         <h3>Giftastic</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <a href="https://kevinroymcgregor.github.io/TrainSchedule/" target="_blank" rel="noopener noreferrer"><img src="assets/images/train.jpg" alt="Train Schedule">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>Train Schedule</h3></a> 
       </div>
 
     </section>
