--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,11 @@
 
         <h3>Train Schedule</h3></a> 
       </div>
+      <div class="work">
+        <a href="https://kevinroymcgregor.github.io/DirtySwellsProject1/" target="_blank" rel="noopener noreferrer"><img src="assets/images/Dice.jpg" alt="GamR">
+
+        <h3>GamR</h3></a> 
+      </div>
 
     </section>
 
